# nn-zero-to-hero

./: .gitignore  LICENSE  README.md  gpt_dev_type_as_you_go.ipynb  makemore_manual_backprop_type_as_you_go.ipynb  makemore_mlp_type_as_you_go.ipynb  makemore_rnn_type_as_you_go.ipynb  makemore_type_as_you_go.ipynb  makemore_wavenet_type_as_you_go.ipynb  micrograd_type_as_you_go.ipynb  pyproject.toml
